--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -116,11 +116,11 @@ a {
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
-  padding: 2px 4px;
+  padding: 4px 4px 1px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 0.9rem;
   color: #383e41;
-  background-color: #f3f6fa;
+  background-color: #dce6f0;
   border-radius: 0.3rem; }
 .main-content pre {
   padding: 0.8rem;
