--- a/_includes/themes/default/default.html
+++ b/_includes/themes/default/default.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>殷东亮的博客</title>
+	<title>{{ page.title }}</title>
 	<meta name="author" content="{{ site.author.name }}">
 	<link href='{{ ASSET_PATH }}/css/style.css' rel="stylesheet" media="all">
 	<link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}/css/solarized_light.css">
@@ -18,7 +18,7 @@
 </head>
 <body>
   <section class="page-header" id="page">
-    <h1 class="project-name">My Blog</h1>
+    <h1 class="project-name">Write the code, Change the world</h1>
     <p class="project-tagline">CS应届毕业生，@tcitry，喜欢Python、Linux、iOS，常年Mac OS和Ubuntu用户，喜欢研究各种提高生产力的工具，坐标大连，博客内容很水，慢慢提高~</p>
     <a href="/" class="btn"><i class="home icon"></i>Home</a>
     <a href="/tags.html" class="btn"><i class="tags icon"></i>Tags</a>
