--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : the-program
+  name : default
 ---
 {% include JB/setup %}
-{% include themes/the-program/default.html %}
+{% include themes/default/default.html %}
