--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 theme :
-  name : the-program
+  name : default
 layout: default
 ---
 {% include JB/setup %}
-{% include themes/the-program/page.html %}
+{% include themes/default/page.html %}
