gem:google sitemap

--- a/_includes/themes/default/default.html
+++ b/_includes/themes/default/default.html
@@ -2,12 +2,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>{{ page.title }}</title>
+	<title>{{ page.title }}--殷东亮的博客</title>
 	<meta name="author" content="{{ site.author.name }}">
 	<link href='{{ ASSET_PATH }}/css/style.css' rel="stylesheet" media="all">
 	<link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}/css/solarized_light.css">
 	<link rel="icon" type="image/png" href="{{ ASSET_PATH }}/img/favicon.png" />
-
 	<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" media="screen">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
@@ -21,6 +20,7 @@
     <h1 class="project-name">Write the code, Change the world</h1>
     <p class="project-tagline">CS应届毕业生，@tcitry，喜欢Python、Linux、iOS，常年Mac OS和Ubuntu用户，喜欢研究各种提高生产力的工具，坐标大连，博客内容很水，慢慢提高~</p>
     <a href="/" class="btn"><i class="home icon"></i>Home</a>
+    <a href="/archive.html" class="btn"><i class="archive icon"></i>Archive</a>
     <a href="/tags.html" class="btn"><i class="tags icon"></i>Tags</a>
     <a href="https://github.com/tcitry" target="_blank" class="btn"><i class="github icon"></i>Github</a>
   </section>
