--- a/_includes/themes/default/default.html
+++ b/_includes/themes/default/default.html
@@ -9,9 +9,9 @@
 	<link rel="icon" type="image/png" href="{{ ASSET_PATH }}/img/favicon.png" />
 	<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" media="screen">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/dist/semantic.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css">
+  <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
   <script type="text/javascript" src="/dist/semantic.min.js"></script>
 
 </head>
