--- a/_includes/themes/default/default.html
+++ b/_includes/themes/default/default.html
@@ -11,7 +11,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
   <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css">
-  <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="/dist/semantic.css">
   <script type="text/javascript" src="/dist/semantic.min.js"></script>
 
 </head>
