--- a/_includes/themes/default/default.html
+++ b/_includes/themes/default/default.html
@@ -18,11 +18,17 @@
 <body>
   <section class="page-header" id="page">
     <h1 class="project-name">Write the code, Change the world</h1>
-    <p class="project-tagline">CS应届毕业生，@tcitry，喜欢Python、Linux、iOS，常年Mac OS和Ubuntu用户，喜欢研究各种提高生产力的工具，坐标大连，博客内容很水，慢慢提高~</p>
+    <p class="project-tagline">CS应届毕业生，@tcitry，喜欢Python、Linux、iOS，常年Mac OS和Ubuntu用户，喜欢研究各种提高生产力的工具，坐标大连。</p>
     <a href="/" class="btn"><i class="home icon"></i>Home</a>
     <a href="/archive.html" class="btn"><i class="archive icon"></i>Archive</a>
     <a href="/tags.html" class="btn"><i class="tags icon"></i>Tags</a>
-    <a href="https://github.com/tcitry" target="_blank" class="btn"><i class="github icon"></i>Github</a>
+    <p></p>
+    <a href="https://github.com/tcitry" style="background: url('/image/sns_bg.png') -263px -5px no-repeat;" class="sns"></a>
+    <a href="https://twitter.com/tcitry" style="background: url('/image/sns_bg.png') -4px -5px no-repeat;" class="sns"></a>
+    <a href="http://www.zhihu.com/people/tcitry" style="background: url('/image/sns_bg.png') -314px -5px no-repeat;" class="sns"></a>
+    <a href="http://segmentfault.com/u/tcitry" style="background: url('/image/sns_bg.png') -520px -5px no-repeat;" class="sns"></a>
+    <a href="http://weibo.com/tcitry" style="background: url('/image/sns_bg.png') -469px -5px no-repeat;" class="sns"></a>
+    <a href="https://www.linkedin.com/in/tcitry" style="background: url('/image/sns_bg.png') -160px -5px no-repeat;" class="sns"></a>
   </section>
   <section class="main-content">
    {{ content }}
