--- a/_includes/themes/default/default.html
+++ b/_includes/themes/default/default.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>{{ page.title }}--殷东亮的博客</title>
+	<title>{{ page.title }}</title>
 	<meta name="author" content="{{ site.author.name }}">
 	<link href='{{ ASSET_PATH }}/css/style.css' rel="stylesheet" media="all">
 	<link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}/css/solarized_light.css">
