--- a/_includes/themes/default/default.html
+++ b/_includes/themes/default/default.html
@@ -27,7 +27,7 @@
     <a href="https://twitter.com/tcitry" style="background: url('/image/sns_bg.png') -4px -5px no-repeat;" class="sns"></a>
     <a href="http://www.zhihu.com/people/tcitry" style="background: url('/image/sns_bg.png') -314px -5px no-repeat;" class="sns"></a>
     <a href="http://segmentfault.com/u/tcitry" style="background: url('/image/sns_bg.png') -520px -5px no-repeat;" class="sns"></a>
-    <a href="https://www.linkedin.com/in/tcitry" style="background: url('/image/sns_bg.png') -160px -5px no-repeat;" class="sns"></a>
+    <a href="http://weibo.com/tcitry" style="background: url('/image/sns_bg.png') -469px -5px no-repeat;" class="sns"></a>
   </section>
   <section class="main-content">
    {{ content }}
