--- a/_includes/themes/default/default.html
+++ b/_includes/themes/default/default.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns:wb="http://open.weibo.com/wb">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -13,7 +13,7 @@
   <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css">
   <link rel="stylesheet" type="text/css" href="/dist/semantic.css">
   <script type="text/javascript" src="/dist/semantic.min.js"></script>
-
+  <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
   <section class="page-header" id="page">
@@ -23,11 +23,11 @@
     <a href="/archive.html" class="btn"><i class="archive icon"></i>Archive</a>
     <a href="/tags.html" class="btn"><i class="tags icon"></i>Tags</a>
     <p></p>
-    <a href="https://github.com/tcitry" style="background: url('/image/sns_bg.png') -263px -5px no-repeat;" class="sns"></a>
-    <a href="https://twitter.com/tcitry" style="background: url('/image/sns_bg.png') -4px -5px no-repeat;" class="sns"></a>
-    <a href="http://www.zhihu.com/people/tcitry" style="background: url('/image/sns_bg.png') -314px -5px no-repeat;" class="sns"></a>
-    <a href="http://segmentfault.com/u/tcitry" style="background: url('/image/sns_bg.png') -520px -5px no-repeat;" class="sns"></a>
-    <a href="http://weibo.com/tcitry" style="background: url('/image/sns_bg.png') -469px -5px no-repeat;" class="sns"></a>
+    <a href="https://github.com/tcitry" target="_blank" style="background: url('/image/sns_bg.png') -263px -5px no-repeat;" class="sns"></a>
+    <a href="https://twitter.com/tcitry" target="_blank" style="background: url('/image/sns_bg.png') -4px -5px no-repeat;" class="sns"></a>
+    <a href="http://www.zhihu.com/people/tcitry" target="_blank" style="background: url('/image/sns_bg.png') -314px -5px no-repeat;" class="sns"></a>
+    <a href="http://segmentfault.com/u/tcitry" target="_blank" style="background: url('/image/sns_bg.png') -520px -5px no-repeat;" class="sns"></a>
+    <a href="http://weibo.com/tcitry" target="_blank" style="background: url('/image/sns_bg.png') -469px -5px no-repeat;" class="sns"></a>
   </section>
   <section class="main-content">
    {{ content }}
