--- a/_includes/themes/default/post.html
+++ b/_includes/themes/default/post.html
@@ -1,6 +1,20 @@
 <article class="unit-article layout-post">
 	<div class="unit-inner unit-article-inner">
 		<div class="content">
+			<div class="ui secondary pointing menu">
+				<a class="item" href="/">
+					Home
+				</a>
+				<a class="item" href="/archive.html">
+					Archive
+				</a>
+				<a class="item" href="/tags.html">
+					Tags
+				</a>
+				<a class="item" href="/about.html">
+					About
+				</a>
+			</div>
 			<header>
 				<div class="unit-head">
 					<div class="unit-inner unit-head-inner">
@@ -12,8 +26,6 @@
 			<div class="bd">
 				<div class="entry-content">
 					{{ content }}
-					<wb:share-button appkey="2273871484" addition="number" type="button" ralateUid="2510226067"></wb:share-button>
-					<br>
 					<div class="meta" style="border-top: 1px dashed #159957;padding-top: 10px;">
 						<div class="list-tag list-linear">
 							<div class="list-head"></div>
