--- a/_includes/themes/default/default.html
+++ b/_includes/themes/default/default.html
@@ -1,4 +1,4 @@
-<html xmlns:wb="http://open.weibo.com/wb">
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -13,7 +13,6 @@
   <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css">
   <link rel="stylesheet" type="text/css" href="/dist/semantic.css">
   <script type="text/javascript" src="/dist/semantic.min.js"></script>
-  <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
   <section class="main-content">
