--- a/_includes/themes/default/post.html
+++ b/_includes/themes/default/post.html
@@ -23,6 +23,19 @@
 			<div class="bd">
 				<div class="entry-content">
 					{{ content }}
+
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- ad_test -->
+					<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-1063134956461362"
+					data-ad-slot="5544565538"
+					data-ad-format="auto"></ins>
+					<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+
+
 					<div class="meta" style="border-top: 1px dashed #159957;padding-top: 10px;">
 						<div class="list-tag list-linear">
 							<div class="list-head"></div>
