--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -10,7 +10,7 @@ html {
   font-family: "Lucida Grande","Lucida Sans Unicode","STHeiti","Helvetica","Arial","Verdana","sans-serif"; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
-  background-color: #fffefb;
+  background-color: #F3F4F5;
 }
 
 /**
