--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -4,10 +4,11 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Lucida Grande","Lucida Sans Unicode","STHeiti","Helvetica","Arial","Verdana","sans-serif";
+  font-family: "Open Sans","Clear Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 16px;
   line-height: 1.6;
-  color: #606c71; }
+  /*color: #606c71; */
+}
 
 a {
   color: #1e6bb8;
