--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -7,7 +7,7 @@
  */
 
 html {
-  font-family: "Open Sans","Clear Sans","Helvetica Neue",Helvetica,Arial,sans-serif; /* 1 */
+  font-family: Lucida Grande","Lucida Sans Unicode","STHeiti","Open Sans","Clear Sans","Helvetica Neue",Helvetica,Arial,sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
   background-color: #F3F4F5;
