--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -7,7 +7,7 @@
  */
 
 html {
-  font-family: Lucida Grande","Lucida Sans Unicode","STHeiti","Open Sans","Clear Sans","Helvetica Neue",Helvetica,Arial,sans-serif; /* 1 */
+  font-family: 'Lantinghei SC', 'Open Sans', Arial, 'Hiragino Sans GB', 'Microsoft YaHei', STHeiti, 'WenQuanYi Micro Hei', SimSun, Helvetica, sans-serif;
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
   background-color: #F3F4F5;
