--- a/_includes/themes/default/post.html
+++ b/_includes/themes/default/post.html
@@ -34,7 +34,7 @@
 					</div><!-- meta -->
 				</div><!-- entry-content -->
 				<div id="related">
-					<div style="font-size: 24px;color: #159957;">Related Posts</div>
+					<div style="font-size: 24px;color: #159957;">Recent Posts</div>
 					<div class="posts ui animated list">
 						{% for post in site.related_posts limit:5 %}
 						<div class="item"><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></div>
