--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,8 +57,8 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: #DC8976;
+  background-image: linear-gradient(120deg, #155799, #DC8976); }
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -113,7 +113,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: #DC8976; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
