--- a/_includes/themes/default/post.html
+++ b/_includes/themes/default/post.html
@@ -25,7 +25,7 @@
 				<div class="entry-content">
 					{{ content }}
 
-					<div class="meta" style="border-top: 1px dashed #159957;padding-top: 10px;">
+					<div class="meta" style="border-top: 1px dashed #DC8976;padding-top: 10px;">
 						<div class="list-tag list-linear">
 							<div class="list-head"></div>
 							{% assign tags_list = page.tags %}
@@ -34,7 +34,7 @@
 					</div><!-- meta -->
 				</div><!-- entry-content -->
 				<div id="related">
-					<div style="font-size: 24px;color: #159957;">Recent Posts</div>
+					<div style="font-size: 24px;color: #DC8976;">Recent Posts</div>
 					<div class="posts ui animated list">
 						{% for post in site.related_posts limit:5 %}
 						<div class="item"><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></div>
