--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -10,7 +10,7 @@ html {
   font-family: "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
-  background-color: #F3F4F5;
+  /*background-color: #F3F4F5;*/
 }
 
 /**
