--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -113,7 +113,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  padding-bottom: 1px dashed #666
+  padding-bottom: 1px dashed #666;
   color: #666; }
 .main-content p {
   margin-bottom: 1em; }
