--- a/_includes/themes/default/post.html
+++ b/_includes/themes/default/post.html
@@ -11,6 +11,9 @@
 				<a class="item" href="/tags.html">
 					Tags
 				</a>
+				<a class="item" href="/about.html">
+					About
+				</a>
 
 			</div>
 			<header>
