--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -4,7 +4,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+  font-family: "Galdeano","Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet MS",Tahoma,"Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;
   font-size: 16px;
   line-height: 1.6;
   /*color: #606c71; */
