cancer img center

--- a/assets/themes/default/css/style.css
+++ b/assets/themes/default/css/style.css
@@ -112,8 +112,8 @@ No styleguide reference.
 }
 .unit-article img {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  /*margin-left: auto;*/
+  /*margin-right: auto;*/
 }
 .unit-article img.left {
   margin-right: 16px;
