--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
 			this.page.identifier = {{ page.url }};
 		};
 
-(function() { // DON'T EDIT BELOW THIS LINE
+(function() {
 	var d = document, s = d.createElement('script');
 
 	s.src = '//yindongliang.disqus.com/embed.js';
