--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -203,13 +203,12 @@ time {
 }
 code,
 pre {
-  font-family: 'Source Code Pro',Courier,monospace;
+  font-family: consola,monospace;
 }
 code {
   color: #f14e32;
   background: #eee;
   padding: 2px 4px;
-  margin: 0px 4px;
   font-size: 14px;
   border-radius: 3px;
 }
