--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,8 +26,8 @@ layout: default
 	<div id="disqus_thread"></div>
 	<script>
 		var disqus_config = function () {
-			this.page.url = {{ page.url }};
-			this.page.identifier = {{ page.url }};
+			this.page.url = "{{ page.url }}";
+			this.page.identifier = "{{ page.url }}";
 		};
 
 (function() {
