--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -17,7 +17,9 @@ h5 {
 }
 img {
   max-width: 100%;
-  margin: 0 auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 a {
   color: #468DF0;
