--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -21,6 +21,10 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+.sns-img img{
+  max-width: 100%;
+  display: inline;
+}
 a {
   color: #468DF0;
   text-decoration: none;
