--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ layout: compress
 
 	<div style="color: #666;text-align: center;">
     <br>
-		&copy;2012-2016 殷东亮
+		&copy;2012-2016 殷东亮 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1257142865'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1257142865%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
 	</div>
 
 </body>
