--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,8 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/core.css">
 <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/feed.xml" />
+<script type="text/javascript" charset="UTF-8" src="http://yindl.qiniudn.com/anti-baidu-latest.min.js"></script>
+
 
 {% if jekyll.environment == 'production' %}
 
