--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,9 +3,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 {% if page.title %}
-	<title>{{ page.title }}</title>
+	<title>{{ page.title }} - 殷东亮的博客</title>
 {% else %}
-	<title>{{ site.title }}</title>
+	<title>{{ site.title }} - 殷东亮的博客</title>
 {% endif %}
 
 <meta name="twitter:card" content="summary" />
