--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,20 +23,21 @@ layout: default
 
 	{{ content }}
 
-	<div id="disqus_thread"></div>
-	<script>
-	var disqus_config = function () {
-	this.page.url = '{{ post.url }}';
-	this.page.identifier = '{{ post.url }}';
-	};
+<!-- 多说评论框 start -->
+	<div class="ds-thread" data-thread-key="{{ post.url }}" data-title="{{ page.title }}" data-url="{{ post.url }}"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"tcitry"};
 	(function() {
-	var d = document, s = d.createElement('script');
-	s.src = '//yindongliang.disqus.com/embed.js';
-	s.setAttribute('data-timestamp', +new Date());
-	(d.head || d.body).appendChild(s);
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
 	})();
 	</script>
-	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-
+<!-- 多说公共JS代码 end -->
 
 </article>
