--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,42 +2,24 @@
 layout: default
 ---
 
-<noscript>
-	<style>
+<p class="meta">
+  {{ page.date | date: "%B %d, %Y" }}
+  <a href="/">
+    <i class="home fa fa-home"></i>
+  </a>
+</p>
 
-		article .footnotes {
-			display: block;
-		}
+<h1 class="title">{{ page.title }}</h1>
 
-	</style>
-</noscript>
-
-<article>
-
-	<div class="center">
-		<h1>{{ page.title }}</h1>
-		<time>{{ page.date | date: '%B %-d, %Y' }}</time>
-	</div>
-
-	<div class="divider"></div>
-
-	{{ content }}
-
-<div id="disqus_thread"></div>
-<script>
-var disqus_config = function () {
-this.page.url = '{{ post.url }}';
-this.page.identifier = '{{ post.url }}';
-};
-(function() {
-var d = document, s = d.createElement('script');
-s.src = 'https://yindongliang.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<div id="post">
+  {{ content }}
+</div>
 
 
 
-</article>
+  {% include share-posts.html %}
+
+  {% include disqus.html %}
+
+
+
