--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,7 +1,6 @@
-<section class="disqus">
+<section class="disqus" style="padding-bottom: 20px;">
     <div id="disqus_thread"></div>
     <script type="text/javascript">
-
         var disqus_shortname = '{{ site.disqus }}';
         var disqus_developer = 0;
         (function() {
@@ -10,5 +9,4 @@
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </section>
