--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -47,7 +47,7 @@
 }
 
 #navigation a{display:block;padding:.1em .1em;color:#000000;}
-#navigation a:hover{background-color:#ff0000;text-decoration:none;color:#f9f9f9;-webkit-transition:color .2s linear;}
+#navigation a:hover{background-color:{{ site.data.theme.highlight_color }};text-decoration:none;color:#f9f9f9;-webkit-transition:color .2s linear;}
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
