--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -483,6 +483,7 @@ textarea{
     max-width: 100%;
     width: auto;
     overflow: hidden;
+    margin: auto;
   }
   .image:after, .image a:after{
     content: ''!important;
