--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,73 +1,27 @@
-<!DOCTYPE html>
-<!--[if lte IE 8]><html class="ie lte8"><![endif]-->
-<!--[if IE]><html class="ie"><![endif]-->
-<!--[if !IE]><!--><html><!--<![endif]-->
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>{% if paginator and paginator.page != 1 %}第{{ paginator.page }}页 | {{ site.title }}{% elsif page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.3, user-scalable=no" />
-    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
-    <meta name="keywords" content="{% if page.tags %}{{ page.tags | join: ', '}}{% else %}{{ site.keywords | join: ', ' }}{% endif %}" />
-    <meta name="author" content="tcitry" />
-    <meta http-equiv="Cache-Control" content="no-transform" />
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <link rel="canonical" href="{{ page.url | replace: 'index.html','' | prepend: site.url }}" />
-    <link rel="stylesheet" type="text/css" href="{{ "/assets/css/style.css" }}" />{% if page.link %}
-    <link rel="stylesheet" type="text/css" href="{{ page.link }}" />{% endif %}{% assign content_js = content | remove: '<!--<' | remove: '-->' | split: 'script>' %}{% assign content_style = content | remove: '<!--<' | remove: '-->' | split: 'style>' %}{% if page.style %}
-    <style type="text/css">{{ content_style[1] }}style>{% endif %}
-    <link rel="icon" href="/favicon.png" />
-    <link rel="alternate" type="application/atom+xml" title="{{ site.title }} Atom Feed" href="http://yindongliang.com/atom.xml" />
-    <script type="text/javascript" src="/assets/js/modernizr.js"></script>
-    <!--[if lte IE 9]>
-      <script src="/assets/js/html5shiv.min.js"></script>
-      <script src="/assets/js/respond.min.js"></script>
-      <script src="/assets/js/classList.min.js"></script>
-      <script type="text/javascript">
-        document.createElement('main');
-      </script>
-    <![endif]-->
-  </head>
-  <body>
-  <nav id="navigation">
-      <ul class="navigation-list hide">
-          <li><a href="/" class="navigation-item{% if page.url == '/index.html' %} active{% endif %}"><i class="icon-home"></i>首页</a></li>
-          <li><a href="/archive.html" class="navigation-item{% if page.url == '/archive.html' %} active{% endif %}"><i class="icon-box"></i>归档</a></li>
-          <li><a href="/about.html" class="navigation-item{% if page.url == '/about.html' %} active{% endif %}"><i class="icon-user"></i>关于</a></li>
-      </ul>
-      <i id="menu" class="icon icon-menu"></i>
-  </nav>
-  
-  <div class="container">
-    <main class="wrapper">
-      <header class="site-header">
-        <h1>
-          {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}
-        </h1>
-        <h2 class="sub-heading">
-            {% if page.date %}<i class="icon-calendar"></i><time datetime="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%Y 年 %m 月 %d 日" }}</time>{% elsif paginator %}{{ site.description }}{% else %}{{ page.description }}{% endif %}
-        </h2>
-      </header>
-  {% if page.style or page.js %}
-  {% if page.style and page.js != true %}{{ content_style[0] }}{{ content_style[2] }}{% endif %}
-  {% if page.js and page.style != true %}{{ content_js[0] }}{{ content_js[2] }}{% endif %}
-  {% if page.style and page.js  %}{{ content_style[0] }}{{ content_js[2] }}{% endif %}
-  {% else %}{{ content }}{% endif %}
-  
-      <footer class="site-footer">
-        <small>&copy; 2012-{{ site.time | date: '%Y' }} by Jekyll Theme</small>
-      </footer>
-  
-    </main>
+---
+layout: compress
+---
 
-  </div>
-  <div id="backtotop">
-    <i class="icon-up-big"></i>
-  </div>
-  <script type="text/javascript" src="/assets/js/main.js"></script>{% if page.jquery %}
-  <script type="text/javascript" src="/assets/js/jquery.min.js"></script>{% endif %}{% if page.scripts %}{% for script in page.scripts %}
-  <script type="text/javascript" src="{{ script }}"></script>{% endfor %}{% endif %}{% if page.js %}
-  <script type="text/javascript">
-  {{ content_js[1] }}script>{% endif %}
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	{% include head.html %}
+</head>
+
+<body>
+
+	{% include header.html %}
+
+	<main>
+		{{ content | replace: '&#8617;', '&#8617;&#xfe0e;' }}
+	</main>
+
+	<div style="color: #666;text-align: center;">
+        <br>
+        &copy;2012-2016 殷东亮 
+    </div>
+
+</body>
+
 </html>
