--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,26 +1,28 @@
 ---
 layout: default
-js: true
-style: true
 ---
-<article class="post-content">
-    
-  <div class="main-content">
-{{ content | replace_first:'markdown-toc','toc' }}
-  </div>
 
-  <div id="info" class="{{ page.categories }}">
+<noscript>
+	<style>
 
-    {% include share.html %}
+		article .footnotes {
+			display: block;
+		}
 
-    <span class='like'><a href="javascript:void(0)" title=""><i class="icon-heart-empty"></i> <span class="disqus-like-count"></span></a></span>
-    <span class='view-code'><a href="javascript:void(0)" data-md="https://raw.githubusercontent.com/tcitry/tcitry.github.io/master/_posts/{{ page.date | date:"%Y-%m-%d" }}-{{ page.id | remove: '/' }}.md" title="在正文中查看源码"><i class="icon-file-code"></i>源码</a></span>
-    <span class="number-of-word"><i class="icon-calc"></i>{{ content | strip_html | strip_newlines | size }} 字</span>
-    <span class="page-tags"><i class="icon-tags"></i><ul class="tags"> {% for tag in page.tags %}<li class="tag"><a href="/tags.html#{{ tag }}" target="_blank" title="查看“{{ tag }}”的相关文章">{{ tag }}</a></li>{% endfor %}</ul></span>
-  </div>
+	</style>
+</noscript>
+
+<article>
+
+	<div class="center">
+		<h1>{{ page.title }}</h1>
+		<time>{{ page.date | date: '%B %-d, %Y' }}</time>
+	</div>
+
+	<div class="divider"></div>
+
+	{{ content }}
+
+<div id="disqus_thread"></div>
 
 </article>
-
-<div class="comment" id="disqus_thread">
-    <a class="show-comments" href="{{ site.url }}{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.id }}"><span class="has-comment"><i class="icon-chat-empty"></i> 留下</span>评论 <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ page.url }}"></span></a>
-</div>
