add https for disqus

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
 	<script>
 	(function() {
 	    var d = document, s = d.createElement('script');
-	    s.src = '//yindongliang.disqus.com/embed.js';
+	    s.src = 'https://yindongliang.disqus.com/embed.js';
 	    s.setAttribute('data-timestamp', +new Date());
 	    (d.head || d.body).appendChild(s);
 	})();
