--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,3 +41,8 @@ var duoshuoQuery = {short_name:"tcitry"};
 <!-- 多说公共JS代码 end -->
 
 </article>
+
+<div style="color: #666;text-align: center;">
+    <br>
+    &copy;2012-2016 殷东亮 
+</div>
