--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
-var duoshuoQuery = {short_name:"tcitry"};
+var duoshuoQuery = {short_name:"dlpu"};
 	(function() {
 		var ds = document.createElement('script');
 		ds.type = 'text/javascript';ds.async = true;
@@ -41,8 +41,3 @@ var duoshuoQuery = {short_name:"tcitry"};
 <!-- 多说公共JS代码 end -->
 
 </article>
-
-<div style="color: #666;text-align: center;">
-    <br>
-    &copy;2012-2016 殷东亮 
-</div>
